--- a/02_infrastructure/files/index.html
+++ b/02_infrastructure/files/index.html
@@ -7,5 +7,6 @@
 <body>
     <h1>Hallo Welt!</h1>
     <p>Diese Webseite wird per Terraform auf AWS S3 gehostet.</p>
+    <p>TEST #1</p>
 </body>
 </html>
