Changes for testing

--- a/02_infrastructure/files/index.html
+++ b/02_infrastructure/files/index.html
@@ -2,11 +2,10 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>Portfolio Testseite</title>
+    <title>Hallo Welt</title>
 </head>
 <body>
     <h1>Hallo Welt!</h1>
-    <p>Diese Webseite wird per Terraform auf AWS S3 gehostet.</p>
-    <p>Test 2025</p>
+    <p>Diese Webseite wird mit Terraform auf AWS S3 gehostet</p>
 </body>
 </html>
