--- a/02_infrastructure/files/index.html
+++ b/02_infrastructure/files/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>Hallo Welt</title>
+    <title>Hallo Welt!</title>
 </head>
 <body>
     <h1>Hallo Welt!</h1>
