Add disabled CloudFront Skript

--- a/02_infrastructure/files/index.html
+++ b/02_infrastructure/files/index.html
@@ -8,5 +8,6 @@
     <h1>Hallo Welt!</h1>
     <p>Diese Webseite wird mit Terraform auf AWS S3 gehostet</p>
     <p>Diese Änderung wurde mithilfe einer funktionieren CI/CD-Pipeline automatisch umgesetzt!</p>
+    <p>Stand: 23.11.2025</p>
 </body>
 </html>
